# DesktopMessenger

./: .gitignore  CMakeLists.txt
App/: CMakeLists.txt  clientpage.cpp  clientpage.h  main.cpp
App/ClientsSIdebar/: clientslistwidget.h  clientssearchbar.h  clientssidebar.cpp  clientssidebar.h
App/MessageView/: messageviewwidget.cpp  messageviewwidget.h
App/MessageView/InputMessageWidget/: inpumessagefield.cpp  inpumessagefield.h
App/UI/: CMakeLists.txt  clientpage.cpp  clientpage.h  mainwindow.cpp  mainwindow.h
App/UI/ClientsSidebar/: clientslistwidget.cpp  clientssearchbar.cpp  clientssidebar.cpp  clientssidebar.h
App/UI/MessageView/: messageviewwidget.cpp  messageviewwidget.h
App/UI/MessageView/ChatHeaderPanel/: chatheaderpanel.cpp  chatheaderpanel.h
App/UI/MessageView/ChatViewWidget/: chatviewwidget.cpp  chatviewwidget.h
App/UI/MessageView/InputMessageWidget/: inpumessagefield.cpp  inpumessagefield.h
App/UI/MessageView/MessageWidget/: messagewidget.cpp  messagewidget.h
Cmake/: FetchDependencies.cmake  Flags.cmake
Dependencies/: CMakeLists.txt
Dependencies/Qt/: CMakeLists.txt
Libs/: CMakeLists.txt  delete_me.cpp
